--- a/core/templates/core/project_overview.html
+++ b/core/templates/core/project_overview.html
@@ -639,7 +639,7 @@
         <i class="bi bi-check2-square"></i>
         <span class="nav-text">{% trans "Tareas" %}</span>
       </a>
-      <a href="{% url 'project_chat_index' project.id %}" class="nav-item">
+      <a href="{% url 'project_chat_premium' project.id %}" class="nav-item">
         <i class="bi bi-chat-dots"></i>
         <span class="nav-text">{% trans "Chat" %}</span>
       </a>
